# kyengine

./: CMakeLists.txt  game.cc
src/engine/: .camera.cc.swp  .camera.hh.swp  .engine.cc.swp  CMakeLists.txt  camera.cc  camera.hh  display.cc  display.hh  engine.cc  engine.hh  fwd.hh  game.cc  game.hh
src/graphics/: CMakeLists.txt  shader.cc  shader.hh
src/math/: .vec2.cc.swp  .vec2.hh.swp  CMakeLists.txt  fwd.hh  mat3.cc  mat3.hh  mat4.cc  mat4.hh  math.hh  vec2.cc  vec2.hh
